--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,10 @@
     commit-nv = commit --no-verify
     push-nv = push --no-verify
 
+    force-push = push --force-with-lease
+    push-force = force-push
+    fp = force-push
+
     lg  = lg-only  --all
     lg2 = lg2-only --all
     lg3 = lg3-only --all
@@ -33,3 +37,5 @@
     lg-only  = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)'
     lg2-only = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
     lg3-only = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset) %C(bold cyan)(committed: %cD)%C(reset) %C(auto)%d%C(reset)%n''          %C(white)%s%C(reset)%n''          %C(dim white)- %an <%ae> %C(reset) %C(dim white)(committer: %cn <%ce>)%C(reset)'
+
+    cob = !git checkout $(git branch | fzf)
